MET-6074 General technical debt fixes